--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Cade's Programming Portfolio</title>
     </head>
     <body>
- <img src=”file:///C:/Users/cadec/Downloads/csc106_banner.jpg”>
+ <img src=”csc106_banner.jpg” alt="Joy of Programming">
 <h1> Welcome to Cade's Programming Portfolio</h1>
     
     </body>
