--- a/javascript.html
+++ b/javascript.html
@@ -7,6 +7,6 @@
     <body>
  <img src="csc106_banner.jpg" alt="Joy of Programming">
 <h1> My Javascript </h1>
-    Back to <a href="index.html"> homepage </a>.
+    Back to <a href="https://cadecurran9.github.io/"> homepage </a>.
     </body>
 </html>
