--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
  <img src="csc106_banner.jpg" alt="Joy of Programming">
+         <img src="home.png">
+         <img src="java.png">
+         <img src="about me.png">
 <h1> Welcome to Cade's Programming Portfolio</h1>
     
     </body>
