--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <title>Cade's Programming Portfolio</title>
     </head>
     <body>
-        <p> This is my portfoolio for programming for my second semester of college at URI. I have a homepage, javascript page, and an about me page that pretty much go over the rest of this project
-        </p> <img src="csc106_banner.jpg" alt="Joy of Programming">
+        
+       <img src="csc106_banner.jpg" alt="Joy of Programming">
          <img src="home.png">
          <img src="java.png">
          <img src="about me.png">
 <h1> Welcome to Cade's Programming Portfolio</h1>
-    
+    <p> This is my portfoolio for programming for my second semester of college at URI.
+            I have a homepage, javascript page, and an about me page that pretty much go over the rest of this project </p>
     </body>
 </html>
