--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <img src="java.png">
          <img src="about me.png">
 <h1> Welcome to Cade's Programming Portfolio</h1>
-    <p> This is my portfoolio for programming for my second semester of college at URI.
-            I have a homepage, javascript page, and an about me page that pretty much go over the rest of this project </p>
+    <h2> This is my portfoolio for programming for my second semester of college at URI.
+            I have a homepage, javascript page, and an about me page that pretty much go over the rest of this project </h2>
     </body>
 </html>
