--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
          <img src="about me.png">
 <h1> Welcome to Cade's Programming Portfolio</h1>
     <h2> This is my portfoolio for programming for my second semester of college at URI.
-            I have a homepage, javascript page, and an about me page that pretty much go over the rest of this project </h2>
+            I have a homepage, javascript page, and an about me page that pretty much goes over the rest of this project. I used Github to make these webpagees and the links that go with them</h2>
     </body>
 </html>
