--- a/about.html
+++ b/about.html
@@ -10,8 +10,7 @@
          <img src="home.png">
          <img src="java.png">
          <img src="about me.png">
-<h1> Welcome to Cade's Programming Portfolio</h1>
-    <h2> This is my portfoolio for programming for my second semester of college at URI.
-            I have a homepage, javascript page, and an about me page that pretty much goes over the rest of this project. I used Github to make these webpagees and the links that go with them</h2>
+        <h1> About Me</h1>
+        Back to <a href="index.html"> home page </a>
     </body>
 </html>
