--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Cade's Programming Portfolio</title>
     </head>
     <body>
+        <h ref="index.html">
+                <img src="java.png" </a>
         
        <img src="csc106_banner.jpg" alt="Joy of Programming">
          <img src="home.png">
