--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Cade's Programming Portfolio</title>
     </head>
     <body>
-        <h ref="index.html">
+        <h ref="http://CadeCurran9.github.io/javascripts.html">
                 <img src="java.png" </a>
         
        <img src="csc106_banner.jpg" alt="Joy of Programming">
