--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Cade's Programming Portfolio</title>
     </head>
     <body>
-        
+        <a href="about.html">  </a>
        <img src="csc106_banner.jpg" alt="Joy of Programming">
          <img src="home.png">
          <img src="java.png">
