--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
             <a href="about.html"> <img src="about me.png"> </a>
        <img src="csc106_banner.jpg" alt="Joy of Programming">
-         <img src="home.png">
+        <a href="index.html"> <img src="home.png"> </a>
          <img src="java.png">
           
 <h1> Welcome to Cade's Programming Portfolio</h1>
