--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <a href="about.html"> <img src="about me.png"> </a>
        <img src="csc106_banner.jpg" alt="Joy of Programming">
         <a href="index.html"> <img src="home.png"> </a>
-         <img src="java.png">
+         <a href="javascripts.html"> <img src="java.png">
           
 <h1> Welcome to Cade's Programming Portfolio</h1>
     <h2> This is my portfoolio for programming for my second semester of college at URI.
