--- a/javascripts.html
+++ b/javascripts.html
@@ -8,5 +8,8 @@
  <img src="csc106_banner.jpg" alt="Joy of Programming">
 <h1> My Javascript</h1>
     Back to <a href="index.html"> home page </a>
+         <img src="home.png">
+         <img src="java.png">
+         <img src="about me.png">
     </body>
 </html>
