--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <body>
         <h1> About Me</h1>
        <img src="csc106_banner.jpg" alt="Joy of Programming">
-         <img src="home.png">
-         <img src="java.png">
-         <img src="about me.png">
+          <a href="about.html"> <img src="about me.png"> </a>
+         <a href="index.html"> <img src="home.png"> </a>
+         <a href="javascripts.html"> <img src="java.png"> </a>
          Back to <a href="index.html"> home page </a>
     </body>
 </html>
