--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,8 @@
         <title>Cade's Javascripts Page</title>
     </head>
     <body>
-     <h1> My Javascript</h1>    
+     <h1> My Javascript</h1>
+        <h2> This is a page showing the different javascrpits we are going to be doing troughout the semester.</h2>
  <img src="csc106_banner.jpg" alt="Joy of Programming">
        <a href="about.html"> <img src="about me.png"> </a>
          <a href="index.html"> <img src="home.png"> </a>
