--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
          <h1> Welcome to Cade's Programming Portfolio</h1>
-    <h2> This is my portfoolio for programming for my second semester of college at URI.  
+      
         <img src="csc106_banner.jpg" alt="Joy of Programming">
        <a href="about.html"> <img src="about me.png"> </a>
       <a href="index.html"> <img src="home.png"> </a>
         <a href="javascripts.html"> <img src="java.png"> </a>
-          
+          <h2> This is my portfolio for programming for my second semester of college at URI.
 
     </body>
 </html>
