--- a/about.html
+++ b/about.html
@@ -6,10 +6,12 @@
     </head>
     <body>
         <h1> About Me</h1>
+        
        <img src="csc106_banner.jpg" alt="Joy of Programming">
           <a href="about.html"> <img src="about me.png"> </a>
          <a href="index.html"> <img src="home.png"> </a>
          <a href="javascripts.html"> <img src="java.png"> </a>
          Back to <a href="index.html"> home page </a>
+        <h2> This is my about me page where I will introduce myself. I am Cade Curran, I'm from North Smithfield, Rhode Island. My family consists of my parents and my brother.
     </body>
 </html>
