--- a/about.html
+++ b/about.html
@@ -12,6 +12,6 @@
          <a href="index.html"> <img src="home.png"> </a>
          <a href="javascripts.html"> <img src="java.png"> </a>
          Back to <a href="index.html"> home page </a>
-        <h2> This is my about me page where I will introduce myself. I am Cade Curran, I'm from North Smithfield, Rhode Island. My family consists of my parents and my brother.
+        <h2> This is my about me page where I will introduce myself. I am Cade Curran, I'm from North Smithfield, Rhode Island. My family consists of my parents and my brother. My favorite sport to play and watch is football and I live with my friends from home on campus.
     </body>
 </html>
