--- a/csstest.html
+++ b/csstest.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Cade's Programming Portfolio</title>
+        <link rel="stylesheet" href="style1.css">
     </head>
     <body>
          <h1> Welcome to Cade's Programming Portfolio</h1>
