--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style1.css">
         <title>Cade's Programming Portfolio</title>
     </head>
     <body>
