--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,7 @@
     <body>
      <h1> My Javascript</h1>
         
- <img src="csc106_banner.jpg" alt="Joy of Programming">
+ <img src="mybanner.png" alt="Joy of Programming">
        <a href="about.html"> <img src="about me.png"> </a>
          <a href="index.html"> <img src="home.png"> </a>
          <a href="javascripts.html"> <img src="java.png"> </a>  
