--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
          <h1> Welcome to Cade's Programming Portfolio</h1>
       
         <img src="mybanner.png" alt="Joy of Programming">
-       <a href="about.html"> <img src="about me.png"> </a>
-      <a href="index.html"> <img src="home.png"> </a>
-        <a href="javascripts.html"> <img src="java.png"> </a>
+       <a href="about.html"> <img src="myabout.png"> </a>
+      <a href="index.html"> <img src="myhome.png"> </a>
+        <a href="javascripts.html"> <img src="myjava.png"> </a>
+  
           <h2> This is my portfolio for programming for my second semester of college at URI.
 
     </body>
