--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       
         <img src="mybanner.png" alt="Joy of Programming">
        <a href="about.html"> <img src="myabout.png"> </a>
-      <a href="index.html"> <img src="myhome.png"> </a>
+      <a href="index.html"> <img src="homemy.png"> </a>
         <a href="javascripts.html"> <img src="myjava.png"> </a>
   
           <h2> This is my portfolio for programming for my second semester of college at URI.
