--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         
        <img src="mybanner.png" alt="Joy of Programming">
           <a href="about.html"> <img src="myabout.png"> </a>
-         <a href="index.html"> <img src="myhome.png"> </a>
+         <a href="index.html"> <img src="homemy.png"> </a>
          <a href="javascripts.html"> <img src="myjava.png"> </a>
          Back to <a href="index.html"> home page </a>
         <h2> This is my about me page where I will introduce myself. I am Cade Curran, I'm from North Smithfield, Rhode Island. My family consists of my parents and my brother. My favorite sport to play and watch is football and I live with my friends from home on campus.
