--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
          <h1> Welcome to Cade's Programming Portfolio</h1>
       
         <img src="mybanner.png" alt="Joy of Programming">
-       <a href="about.html"> <img src="myabout.png"> </a>
+       <a href="about.html"> <img src="aboutmy.png"> </a>
       <a href="index.html"> <img src="homemy.png"> </a>
-        <a href="javascripts.html"> <img src="myjava.png"> </a>
+        <a href="javascripts.html"> <img src="javamy.png"> </a>
   
           <h2> This is my portfolio for programming for my second semester of college at URI.
 
