--- a/javascripts.html
+++ b/javascripts.html
@@ -9,9 +9,9 @@
      <h1> My Javascript</h1>
         
  <img src="mybanner.png" alt="Joy of Programming">
-       <a href="about.html"> <img src="myabout.png"> </a>
+       <a href="about.html"> <img src="aboutmy.png"> </a>
          <a href="index.html"> <img src="homemy.png"> </a>
-         <a href="javascripts.html"> <img src="myjava.png"> </a>  
+         <a href="javascripts.html"> <img src="javamy.png"> </a>  
     Back to <a href="index.html"> home page </a>
        <h2> This is a page showing the different javascrpits we are going to be doing troughout the semester.</h2>
     </body>
