--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
          <h1> Welcome to Cade's Programming Portfolio</h1>
      
        <img src="mybanner.png" alt="Joy of Programming"> 
-       <tr>
+      <table>
+        <tr>
            <th> <a href="about.html"> <img src="aboutmy.png"> </a> </th>
            <th>  <a href="index.html"> <img src="homemy.png"> </a> </th>
            <th>   <a href="javascripts.html"> <img src="javamy.png"> </a> </th>
         </tr>
+        </table>
           <h2> This is my portfolio for programming for my second semester of college at URI.
 
     </body>
