--- a/javascripts.html
+++ b/javascripts.html
@@ -7,7 +7,7 @@
     </head>
     <body>
      <h1> My Javascript</h1>
-        
+        <img src="mybanner.png" alt="Joy of Programming"> 
  <table>
         <tr>
            <th> <a href="about.html"> <img src="aboutmy.png"> </a> </th>
