--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
          <h1> Welcome to Cade's Programming Portfolio</h1>
      
        <img src="mybanner.png" alt="Joy of Programming"> 
-      <table>
+      <table id="nav-table">
         <tr>
-           <th> <a href="about.html"> <img src="aboutmy.png"> </a> </th>
-           <th>  <a href="index.html"> <img src="homemy.png"> </a> </th>
-           <th>   <a href="javascripts.html"> <img src="javamy.png"> </a> </th>
+           <td> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
+           <td>  <a href="index.html"> <img src="homemy.png"> </a> </td>
+           <td>   <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
         </tr>
         </table>
        
