--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
        <img src="mybanner.png" alt="Joy of Programming"> 
       <table id="nav-table">
         <tr>
-           <td> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
-           <td>  <a href="index.html"> <img src="homemy.png"> </a> </td>
-           <td>   <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
+           <td id="nav-id"> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
+           <td id="nav-id">  <a href="index.html"> <img src="homemy.png"> </a> </td>
+           <td id="nav-id">  <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
         </tr>
         </table>
        
