--- a/javascripts.html
+++ b/javascripts.html
@@ -8,13 +8,13 @@
     <body>
      <h1> My Javascript</h1>
         <img src="mybanner.png" alt="Joy of Programming"> 
- <table>
+<table id="nav-table">
         <tr>
-           <th> <a href="about.html"> <img src="aboutmy.png"> </a> </th>
-           <th>  <a href="index.html"> <img src="homemy.png"> </a> </th>
-           <th>   <a href="javascripts.html"> <img src="javamy.png"> </a> </th>
-        </tr>
-        </table> 
+           <td id="nav-td"> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
+           <td id="nav-td">  <a href="index.html"> <img src="homemy.png"> </a> </td>
+           <td id="nav-td">  <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
+    </tr>
+       </table> 
     Back to <a href="index.html"> home page </a>
        <h2> This is a page showing the different javascrpits we are going to be doing troughout the semester.</h2>
     </body>
