--- a/about.html
+++ b/about.html
@@ -9,14 +9,14 @@
         <h1> About Me</h1>
         
        <img src="mybanner.png" alt="Joy of Programming">
-           <table>
+           <table id="nav-table">
         <tr>
-           <th> <a href="about.html"> <img src="aboutmy.png"> </a> </th>
-           <th>  <a href="index.html"> <img src="homemy.png"> </a> </th>
-           <th>   <a href="javascripts.html"> <img src="javamy.png"> </a> </th>
+           <td id="nav-td"> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
+           <td id="nav-td">  <a href="index.html"> <img src="homemy.png"> </a> </td>
+           <td id="nav-td">  <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
         </tr>
         </table>
-         Back to <a href="index.html"> home page </a>
+       Back to <a href="index.html"> home page </a>
         <h2> This is my about me page where I will introduce myself. I am Cade Curran, I'm from North Smithfield, Rhode Island. My family consists of my parents and my brother. My favorite sport to play and watch is football and I live with my friends from home on campus.
     </body>
 </html>
