--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
          
      
-       <img src="mybanner.png" alt="Joy of Programming"> 
+       <img id="header" src="mybanner.png" alt="Joy of Programming"> 
       <table id="nav-table">
         <tr>
            <td id="nav-td"> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
