--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
         Back to <a href="index.html"> home page </a>
           <h1> About Me</h1>
         
-        <h2> This is my about me page where I will introduce myself. I am Cade Curran, I'm from North Smithfield, Rhode Island. My family consists of my parents and my brother. My favorite sport to play and watch is football and I live with my friends from home on campus.
-    </body>
+        <p>I am Cade Curran, I'm from North Smithfield, Rhode Island. My family consists of me, my brother, and parents. My favorite sport to watch and play is football and my favorite 
+            player of all time is Tom Brady. I enjoy the Summer the most because I love the beaitful warm weather and hanging out with friends. As of right now I work for Pizza Express
+            which is reatuarant that sells pizza at the University of Rhode Island. I am a freshman at URI and I am currently sill undeclared but very interested in the computer science field.
+        </p>
+            </body>
 </html>
