--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       
-       <img src="mybanner.png" alt="Joy of Programming">
+       <img id="header" src="mybanner.png" alt="Joy of Programming"> 
            <table id="nav-table">
         <tr>
            <td id="nav-td"> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
