--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             player of all time is Tom Brady. I enjoy the Summer the most because I love the beatiful warm weather and hanging out with friends. As of right now I work for Pizza Express
             which is reatuarant that sells pizza at the University of Rhode Island. I am a freshman at URI and I am currently sill undeclared but very interested in the computer science field.
         </p>
-        <img id="pic1" src="pic1.png">
+        <img id="pic1" src="pic1.PNG">
             </body>
     
 </html>
