--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
             which is reatuarant that sells pizza at the University of Rhode Island. I am a freshman at URI and I am currently sill undeclared but very interested in the computer science field.
         </p>
        <img id="pic1" src="CadeCurran.jpg" alt="Joy of Programming"> 
+        <img id="pic2" src="CadeCurran2.jpg" alt="Joy of Programming"> 
            <table id="nav-table">
             </body>
     
