--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
         </p>
        <img id="pic1" src="CadeCurran.jpg" alt="Joy of Programming"> 
         <img id="pic2" src="CadeCurran2.jpg" alt="Joy of Programming"> 
+         <img id="pic3" src="pic3.jpg" alt="Joy of Programming"> 
            <table id="nav-table">
             </body>
     
