--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
            <td id="nav-td">  <a href="index.html"> <img src="homemy.png"> </a> </td>
            <td id="nav-td">  <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
         </tr>
-        </table>
+        </table id="nav-table">
        <h1> Welcome to Cade's Programming Portfolio</h1>
           <h2> This is my portfolio for programming for my second semester of college at URI.
 
