--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
            <td id="nav-td">  <a href="index.html"> <img src="homemy.png"> </a> </td>
            <td id="nav-td">  <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
         </tr>
-        </table>
+        </table id="nav-table">
         Back to <a href="index.html"> home page </a>
           <h1> About Me</h1>
         
