--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
         <img id="pic2" src="CadeCurran2.jpg" alt="Joy of Programming"> 
          <img id="pic3" src="pic3.jpg" alt="Joy of Programming"> 
         <img id="pic4" src="pic4.jpg" alt="Joy of Programming"> 
-           <table id="nav-table">
+           <table>
+               
             </body>
     
 </html>
