--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
         </p>
       
            <table id="pic-table">
-               <tr>
+               <tr id="top2-pic">
                     <td id="pic1-td"><img id="pic1" src="CadeCurran.jpg" alt="Joy of Programming"></td>
                    <td id="pic2-td"><img id="pic2" src="CadeCurran2.jpg" alt="Joy of Programming"></td>
-                     </tr>
+                     </tr id="top2-pic">
           <tr>
                     <td id="pic3-td"><img id="pic3" src="pic3.jpg" alt="Joy of Programming"></td>
                    <td id="pic4-td"> <img id="pic4" src="pic4.jpg" alt="Joy of Programming"> </td>
