--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         </tr>
         </table id="nav-table">
         Back to <a href="index.html"> home page </a>
-          <h1> About Me</h1>
+          <h1 id="AboutMeHeader"> About Me</h1>
         
         <p id="AboutMe">I am Cade Curran, I'm from North Smithfield, Rhode Island. My family consists of me, my brother, and parents. My favorite sport to watch and play is football and my favorite 
             player of all time is Tom Brady. I enjoy the Summer the most because I love the beatiful warm weather and hanging out with friends. As of right now I work for Pizza Express
