--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <td id="nav-td"> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
            <td id="nav-td">  <a href="index.html"> <img src="homemy.png"> </a> </td>
            <td id="nav-td">  <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
-            <td id="nav-td">  <a href="FinalProject.html"> <img src="final.png"> </a> </td>
+            <td id="nav-td">  <a href="Finalproject.html"> <img src="final.png"> </a> </td>
         </tr>
         </table id="nav-table">
        <h1> Welcome to Cade's Programming Portfolio</h1>
