--- a/Finalproject.html
+++ b/Finalproject.html
@@ -13,7 +13,7 @@
            <td id="nav-td"> <a href="about.html"> <img src="aboutmy.png"> </a> </td>
            <td id="nav-td">  <a href="index.html"> <img src="homemy.png"> </a> </td>
            <td id="nav-td">  <a href="javascripts.html"> <img src="javamy.png"> </a> </td>
-          <td id="nav-td">  <a href="Finalproject.html"> <img src="final.png"> </a> </td>
+          <td id="nav-td">  <a href="Finalproject.html"> <img src="final.PNG"> </a> </td>
         </tr>
         </table id="nav-table">
         Back to <a href="index.html"> home page </a>
