--- a/Finalproject.html
+++ b/Finalproject.html
@@ -24,5 +24,5 @@
     src="https://www.khanacademy.org/computer-programming/final-project/6035289913901056/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script> 
         
         <h2><a href="https://www.loom.com/share/bc2399de385d43b8ad79af3ad8cca62a">Mad Libs Video</a></h2><script
-    src="https://www.loom.com/embed/bc2399de385d43b8ad79af3ad8cca62a"></script> 
+    src="hey.PNG"></script> 
 </html>
